<resources>
    <string name="app_name">Under Guide</string>
    <string name="title_activity_under_guide">UnderGuide</string>
    <string name="title_activity_character_select">Character Select</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_patch_button">Patches</string>
    <string name="main_menu_character_button">Characters</string>
    <string name="main_menu_systems_button">Systems</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_character_view">Character View</string>
    <string name="CharacterNameHeader">Name:</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="CharacterHealthHeader">Health:</string>
    <string name="CharacterTraitHeader">Trait:</string>
    <string name="MovesHeader">Moves</string>
    <string name="CombosHeader">Combos</string>
    <string name="action_update">Update</string>
    <string name="move_label_version">Version</string>
    <string name="move_label_damage">DMG</string>
    <string name="move_label_active_frames">Act.</string>
    <string name="move_label_startup_frames">SU.</string>
    <string name="move_label_recovery_frames">Rec.</string>
    <string name="move_label_advantage_frames">Adv.</string>
    <string name="move_label_block_type">Blk.</string>
    <string name="title_activity_markdown_viewer">MarkdownViewer</string>
    <string name="title_activity_patch_notes">Patch Notes</string>
</resources>
