<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg00"
    tools:context="com.stuartsullivan.unibwikiguide.MainMenu">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/MainMenuLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/unibel_logo" />

        <RelativeLayout
            android:id="@+id/MainMenuButtonHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/MainMenuLogo">

            <LinearLayout
                android:id="@+id/MainMenuRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/MainMenuSystems"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_menu_systems_button" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/MainMenuCharacters"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_menu_character_button" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/MainMenuPatches"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/MainMenuRow1"
                android:layout_centerHorizontal="true"
                android:text="@string/main_menu_patch_button" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
