<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg00"
    tools:context="com.stuartsullivan.unibwikiguide.CharacterView">

    <ScrollView
        android:id="@+id/TableScroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/CharacterHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/placeholder"
                android:scrollHorizontally="false"
                android:layout_marginRight="30dp"/>

            <GridLayout
                android:id="@+id/CharacterBreakdownTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/CharacterHeader"
                android:numColumns="auto_fit"
                android:verticalSpacing="20dp"
                android:horizontalSpacing="20dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:stretchColumns="*">

                    <TextView android:id="@+id/CharacterHealthHeader"
                        android:text="@string/CharacterHealthHeader"
                        android:textColor="#ffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"/>

                    <TextView android:id="@+id/CharacterHealth"
                        android:text="@string/placeholder"
                        android:textColor="#ffff"
                        android:ellipsize="none"
                        android:maxLines="100"
                        android:scrollHorizontally="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="2"/>


                    <TextView android:id="@+id/CharacterTraitHeader"
                        android:text="@string/CharacterTraitHeader"
                        android:textColor="#ffff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="4"
                        android:layout_row="1"
                        android:layout_column="0"/>

                    <TextView android:id="@+id/CharacterTrait"
                        android:text="@string/placeholder"
                        android:textColor="#ffff"
                        android:ellipsize="none"
                        android:maxLines="25"
                        android:scrollHorizontally="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="2"/>

            </GridLayout>

            <TextView
                android:id="@+id/MoveHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:text="@string/MovesHeader"
                android:layout_marginRight="30dp"
                android:layout_below="@id/CharacterBreakdownTable"/>

            <ListView
                android:id="@+id/move_breakdown_table"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_below="@id/MoveHeader"
                android:stretchColumns="*">

            </ListView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
